Se realiza cambio en toda la página

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,6 +3,12 @@ $color-2: #EEEEEE;
 $color-3: #BDBDBD;
 $dark-color: #212121;
 
+$accent-color: #03A9F4;
+$color-background: #020132;
+$gradient-light: #4dc9e6;
+$gradient-dark:#210CAE;
+$gray:#757575;
+
 $color-HTML: #E93E30;
 $color-js: #F7E018;
 $color-css: #299ed5;
@@ -13,5 +19,5 @@ $color-git: #F05033;
 $color-github: #000000;
 $color-node: #5fa04e;
 
-$font-primary-text: "Nunito", sans-serif;
-$font-primary-header: "Orbitron", sans-serif;
+$font-primary-text: "Poppins", sans-serif;
+$font-primary-header: "EB Garamond", serif;
