--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,7 +11,11 @@
 @import "layout/about";
 @import "layout/skills";
 @import "layout/works";
+@import "layout/site-background";
 @import "layout/contact";
 @import "layout/footer";
 
 @import "components/navbar";
+@import "components/buttons";
+@import "components/works-item";
+@import "components/contact-content";
