--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11973,209 +11973,151 @@ textarea.form-control-lg {
 }
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #FAFAFA;
-  scrollbar-color: #E93E30 #67C770;
-  background-image: url(../img/back.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-color: #020132;
 }
 
 .header {
   width: 100%;
   height: 100vh;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  font-family: "Orbitron", sans-serif;
-  background: rgba(0, 0, 0, 0.85);
 }
-.header__title-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #FAFAFA;
-  flex-wrap: wrap;
-  padding: 0 30px;
+.header__text {
+  font-size: 48px;
+  color: #757575;
 }
-.header__welcome {
-  font-size: 70pt;
+.header__title {
+  font-family: "EB Garamond", serif;
+  font-size: 120px;
   font-weight: 900;
-  text-align: center;
 }
-.header__welcome--slideup {
-  animation: slideUp 2.5s ease-in-out;
+.header__title-line {
+  display: block;
 }
-.header__welcome--slidedown {
-  animation: slideDown 2.5s ease-in-out;
-}
-.header__welcome--animated-text::after {
-  content: "A";
-  animation: changeText 4s ease-in-out infinite;
-  opacity: 1;
-  transition: opacity 4s ease-in-out;
-}
-.header__welcome--fadein {
-  animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
+.header__title-dot {
+  color: #03A9F4;
+  vertical-align: sub;
 }
 
-@keyframes slideUp {
-  from {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes slideDown {
-  from {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes changeText {
-  0%, 100% {
-    content: "A";
-    opacity: 1;
-  }
-  25%, 50%, 75% {
-    opacity: 0;
-  }
-  50% {
-    content: "O";
-    opacity: 1;
-  }
-}
 @media screen and (max-width: 800px) {
-  .header__welcome {
-    font-size: 55pt;
-    font-weight: 800;
+  .header__title {
+    font-size: 100px;
+    font-weight: 900;
   }
 }
 @media screen and (max-width: 600px) {
-  .header__welcome {
-    font-size: 40pt;
-    font-weight: 800;
+  .header__title {
+    font-size: 80px;
+    font-weight: 900;
   }
 }
 .main {
-  background: rgba(0, 0, 0, 0.55);
+  background-image: url("../img/training.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .about {
+  width: 100%;
   height: 100vh;
-  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.about__header {
-  font-family: "Orbitron", sans-serif;
-  padding: 0.5em 0;
+.about__row {
+  width: 100%;
 }
-.about__content {
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 2rem;
-  width: 90%;
-  max-width: 1000px;
+.about__images {
+  width: 100%;
   height: auto;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  position: relative;
+}
+.about__image--primary {
+  z-index: 2;
+  border-radius: 20px;
+}
+.about__image--frame {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  z-index: 1;
+}
+.about__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 1em;
+}
+.about__description {
+  width: 100%;
+  max-width: 600px;
+}
+.about__actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  gap: 50px;
-}
-.about__text {
-  display: inline;
-  width: 100%;
-  max-width: 400px;
-  padding: 1em 0;
-}
-.about__text p {
-  font-size: 20px;
-  display: inline;
-}
-.about__name {
-  font-size: 22px;
-  font-weight: 500;
-  display: inline;
-}
-.about__specialization {
-  font-size: 22px;
-  font-weight: 500;
-  display: inline;
-}
-.about__image-img {
-  width: 100%;
-  max-width: 350px;
-  border-radius: 50%;
+  gap: 2em;
 }
 
+@media screen and (max-width: 800px) {
+  .about__header {
+    margin-top: 3em;
+  }
+  .about__actions {
+    margin-bottom: 3em;
+  }
+}
+@media screen and (max-width: 600px) {
+  .about__header {
+    margin-top: 3em;
+  }
+  .about__actions {
+    margin-bottom: 3em;
+  }
+}
 .skills {
   padding: 2rem;
   color: white;
   text-align: center;
-  background: rgba(0, 0, 0, 0.65);
   height: 100vh;
+}
+.skills__text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  gap: 1em;
 }
-.skills__text {
-  padding: 1em 0;
-}
-.skills__header {
-  font-family: "Orbitron", sans-serif;
-  padding: 0.5em 0;
+.skills__title {
+  text-align: start;
 }
 .skills__description {
-  font-size: 18px;
-}
-.skills__list-item {
-  display: inline;
-  padding: 0 0.5em;
+  text-align: start;
+  font-size: 16px;
 }
 .skills__technologies {
-  width: 90%;
-  background: rgba(202, 201, 201, 0.15);
-  border-radius: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 2rem;
+  background-image: linear-gradient(to right, #210CAE, #4dc9e6);
+  width: 100%;
+  max-width: 500px;
   height: 500px;
+  border-radius: 20px;
+  padding: 2rem;
   position: relative;
 }
 .skills__technology {
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   -webkit-backdrop-filter: blur(10px);
@@ -12211,105 +12153,72 @@ body {
   color: #5fa04e;
 }
 
+@media screen and (max-width: 800px) {
+  .skills__title {
+    margin-top: 3em;
+  }
+  .skills {
+    margin-bottom: 4em;
+  }
+}
+@media screen and (max-width: 600px) {
+  .skills__title {
+    margin-top: 3em;
+  }
+  .skills {
+    margin-bottom: 4em;
+  }
+}
 /* Works. */
 .works {
-  color: white;
-  background: rgba(0, 0, 0, 0.75);
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-
-.works__text {
-  width: 80%;
-  max-width: 1280px;
-  padding: 0.5em 0;
+.works__title {
+  padding: 0.3em 0;
+}
+.works__articles {
+  margin-top: 5em;
+  display: flex;
+  flex-direction: column;
+  gap: 10em;
 }
 
-.works__text p {
-  font-size: 18px;
+@media screen and (max-width: 800px) {
+  .works__title {
+    margin-top: 3em;
+  }
+  .skills__technologies {
+    margin-bottom: 3em;
+  }
+}
+@media screen and (max-width: 600px) {
+  .works__title {
+    margin-top: 3em;
+  }
+  .works {
+    margin-bottom: 3em;
+  }
+}
+.site-background {
+  background-image: linear-gradient(to right, #210CAE, #4dc9e6);
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
 }
 
-.works__header {
-  font-family: "Orbitron", sans-serif;
-  padding: 0.5em 0;
-}
-
-.card-glass {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 15px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  color: #fff;
-}
-
-.rounded-top-img {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
-
-.btn-glass {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  color: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: background 0.3s, color 0.3s;
-}
-
-.btn-glass:hover {
-  background: rgba(255, 255, 255, 0.2);
-  color: #fff;
-}
-
-.card-text {
-  font-size: 16px;
-}
-
-/* Works. */
 .contact {
-  color: white;
-  background: rgba(0, 0, 0, 0.85);
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
 }
-.contact__header {
-  font-family: "Orbitron", sans-serif;
-  padding: 0.5em 0;
-}
-.contact__email {
-  color: #FAFAFA;
-}
-.contact__email--animation {
-  color: #fff;
-  animation: pulse-shadow 2s infinite;
+.contact__title {
+  padding: 3em;
 }
 
-@keyframes pulse-shadow {
-  0% {
-    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-  }
-  50% {
-    filter: drop-shadow(0 0 20px rgb(255, 255, 255));
-  }
-  100% {
-    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-  }
-}
 .footer {
-  background: rgba(0, 0, 0, 0.9);
   color: #FAFAFA;
   display: flex;
   flex-direction: column;
@@ -12335,16 +12244,177 @@ body {
   font-weight: 200;
 }
 
+.navbar {
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .nav-link {
   color: #FAFAFA;
   font-size: 18px;
 }
 
-.glassmorphism-navbar {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  -webkit-backdrop-filter: blur(10px);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.nav-link:hover {
+  color: #03A9F4;
+}
+
+.navbar-brand__image {
+  width: 100%;
+  max-width: 90px;
+  height: auto;
+}
+
+.button__custom {
+  background: linear-gradient(to right, #4dc9e6, #210CAE);
+  border-radius: 15px;
+  width: 150px;
+  border: none;
+  transition: all 1s ease-in-out;
+}
+.button__custom:hover {
+  background: linear-gradient(to left, #4dc9e6, #210CAE);
+}
+.button__custom--header {
+  padding: 0.5em;
+  color: #FAFAFA;
+  width: 200px;
+}
+
+.btn-outline-gradient {
+  width: 200px;
+  position: relative;
+  background: linear-gradient(to right, #4dc9e6, #210CAE);
+  color: white;
+  -webkit-background-clip: text;
+  background-clip: text;
+  border: 2px solid transparent;
+  -o-border-image: linear-gradient(to right, #4dc9e6, #210CAE);
+     border-image: linear-gradient(to right, #4dc9e6, #210CAE);
+  border-image-slice: 1;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+}
+
+.btn-outline-gradient:hover {
+  color: transparent;
+}
+
+.works__item {
+  display: flex;
+  flex-direction: row;
+}
+.works__item--reverse {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.works__item .works-item__content {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  text-align: left;
+}
+.works__item .works-item__content .works-item__title {
+  color: #03A9F4;
+  font-weight: 300;
+}
+.works__item .works-item__content .works-item__actions .works-item__link {
+  text-decoration: none;
+  color: #FAFAFA;
+  font-weight: 200;
+  padding: 1em;
+}
+.works__item .works-item__content .works-item__actions .works-item__link:hover {
+  color: #03A9F4;
+}
+
+.works-item__media {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+}
+.works-item__media .works-item__image {
+  height: auto;
+}
+.works-item__media .works-item__image--project {
+  opacity: 0.9;
+  z-index: 2;
+  border-radius: 20px;
+}
+.works-item__media .works-item__image--frame {
+  position: absolute;
+  top: 8%;
+  right: 8%;
+  z-index: 1;
+}
+
+.works-item__media--reverse {
+  justify-content: flex-start;
+}
+
+.works-item__image--frame-reverse {
+  top: 8%;
+  left: 8%;
+}
+
+.contact-content .contact__intro {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.contact__info {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.contact__icon {
+  background-image: linear-gradient(to right, #4dc9e6, #210CAE);
+  border-radius: 15px;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  line-height: 50px;
+  text-align: center;
+  background-color: #f0f0f0;
+  font-size: 24px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.contact__link {
+  padding: 0 0.5em;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.contact__form-container {
+  padding: 2em;
+  background-image: linear-gradient(to bottom right, #4dc9e6, #210CAE);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+}
+
+.contact__input::-moz-placeholder {
+  color: #ccc; /* Color claro para el placeholder */
+  opacity: 1;
+}
+
+.contact__input::placeholder {
+  color: #ccc; /* Color claro para el placeholder */
+  opacity: 1;
+}
+
+.contact__textarea::-moz-placeholder {
+  color: #ccc; /* Color claro para el placeholder */
+  opacity: 1;
+}
+
+.contact__textarea::placeholder {
+  color: #ccc; /* Color claro para el placeholder */
+  opacity: 1;
 }/*# sourceMappingURL=main.css.map */
