--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -1,40 +1,7 @@
-.contact {
-    color: white;
-    background: rgba(0, 0, 0, 0.85); 
-    width: 100%;
-    height: 100vh;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.contact{
     text-align: center;
 
-    &__header {
-        font-family: "Orbitron", sans-serif;
-        padding: 0.5em 0;
-    }
-
-    &__email {
-        color: #FAFAFA;
-
-        &--animation {
-            color: #fff;
-            animation: pulse-shadow 2s infinite;
-        }
-    }
-}
-
-@keyframes pulse-shadow {
-    0% {
-        filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
-    }
-
-    50% {
-        filter: drop-shadow(0 0 20px rgba(255, 255, 255, 1));
-    }
-
-    100% {
-        filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    &__title{
+        padding: 3em;
     }
 }
