--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,3 +1,6 @@
 .main {
-    background: rgba(0, 0, 0, 0.55);
+    background-image: url("../img/training.png");
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
 }
