--- a/assets/scss/layout/_works.scss
+++ b/assets/scss/layout/_works.scss
@@ -1,63 +1,43 @@
 /* Works. */
 .works {
-    color: white;
-    background: rgba(0, 0, 0, 0.75);
     width: 100%;
-    height: 100vh;
+    height: auto;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    &__title {
+        padding: 0.3em 0;
+    }
+
+    &__articles{
+        margin-top: 5em;
+        display: flex;
+        flex-direction: column;
+        gap: 10em;
+    }
 }
 
-.works__text {
-    width: 80%;
-    max-width: 1280px;
-    padding: 0.5em 0;
+@media screen and (max-width:800px) {
+    .works__title{
+        margin-top: 3em;
+    }
+
+    .skills__technologies{
+        margin-bottom: 3em;
+    }
 }
 
-.works__text p{
-    font-size: 18px;
-}
 
-.works__header {
-    font-family: $font-primary-header;
-    padding: 0.5em 0;
-}
+@media screen and (max-width:600px) {
+    .works__title{
+        margin-top: 3em;
+    }
 
-.card-glass {
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    color: #fff;
+    .works{
+        margin-bottom: 3em;
+    }
 }
-
-.rounded-top-img {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-.btn-glass {
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background 0.3s, color 0.3s;
-}
-
-.btn-glass:hover {
-    background: rgba(255, 255, 255, 0.2);
-    color: #fff;
-}
-
-.card-text {
-    font-size: 16px;
-}
-/* Works. */
