--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,10 +1,3 @@
-.navbar {
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-}
-
 .nav-link {
     color: $color-1;
     font-size: 18px;
@@ -15,7 +8,8 @@
 }
 
 .navbar-brand__image{
+    max-width: 80px;
+    min-width: 50px;
     width: 100%;
-    max-width: 90px;
     height: auto;
 }
